--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
     <title>practice-2-milestone-1</title>
 </head>
 <body>
-    
+    <section class="header-section flexibale">
+        <div class="half-width">
+            <h1>welcome to</h1>
+            <h1><span class="color-change">safiul azam</span> world</h1>
+            <h3>Build Climber and Train Stopper</h3>
+            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+            <a class="link-btn" target="_blank" href="https://www.linkedin.com/in/safiul-azam-b2a44a212/">hire me</a>
+        </div>
+        <div class="half-width">
+            <img src="images/jhankar.png" alt="jhankar">
+        </div>
+    </section>
 </body>
 </html>
