--- a/index.html
+++ b/index.html
@@ -23,5 +23,16 @@
             <img src="images/jhankar.png" alt="jhankar">
         </div>
     </section>
+    <section class="dream-section flexibale">
+        <div class="half-width">
+            <img src="images/jhankar2.png" alt="jhanker2">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h3>Become a web developer</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="link-btn" target="_blank" href="https://www.linkedin.com/in/safiul-azam-b2a44a212/">download resume</a>
+        </div>
+    </section>
 </body>
 </html>
