added some isues

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
     </section>
     <section class="experiences">
         <h1 class="exp">experiences</h1>
-        <div class="flexibale">
-            <div class="web-exp full">
+        <div class="flex-exp-side">
+            <div class="exp-half-width full">
                 <h2>Full Stack Web Developer</h2>
                 <h3 class="color-change">2022-Present | Pro Level Developer</h3>
                 <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most pophalf-widthular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
             </div>
-            <div class="web-exp baby">
+            <div class="exp-half-width baby">
                 <h2>Baby Web Developer</h2>
                 <h3 class="color-change">2022-2023 | Programming Hero Learner</h3>
                 <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
